<resources>
    <string name="app_name">Github App</string>
    <string name="username">Username: %s</string>
    <string name="repository">Repository: %s</string>
    <string name="companyDetail">Company: %s</string>
    <string name="location">Location: %s</string>
    <string name="followers">Followers: %s</string>
    <string name="following">Following: %s</string>
    <string name="desc">Image Splash Activity</string>
    <string name="detail_user">Detail User</string>
    <string name="search">Search</string>

    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>
    <string name="change_theme">Change Theme</string>
    <string name="favorite">Favorite</string>

    <string name="theme">Dark Theme</string>
    <string name="yuk_cari_user_github">Yuk Cari User GitHub</string>
    <string name="followers_not_exists">Followers not exists</string>
    <string name="followers_tidak_ada">Not followers yet</string>
    <string name="following_tidak_ada">Not following yet</string>

</resources>